# opn

./: Cargo.toml  README.md  opn.sh
src/: cli.rs  command.rs  config.rs  main.rs
test/: .opn
