[package]
name = "opn"
version = "0.1.0"
edition = "2024"
description = "Context-aware command runner"
license = "MIT"
authors = ["tq303"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# home config locator
dirs = "5.0"
glob = "0.3.2"
# file system walker for merging
walkdir = "2.5"
# regex pattern matching
regex = "1.10"
